Add BFT changes for empty state back in
Signed-off-by: Jason Frame <jason.frame@consensys.net>